--- a/indes.html
+++ b/indes.html
@@ -30,41 +30,47 @@
 
             <label>
                 Converter <b>para</b>
-                <select>
+                <select id="currency-select">
                     <option>
                         US$ Dolar Americano
                     </option>
                     <option>
                         € Euro
                     </option>
+                    <option>
+                        Bitcoin
+                    </option>
                 </select>
             </label>
 
             <label>
                 Valor
-                <input placeholder="R$ 10.000,00">
+                <input id="input-value" placeholder="R$ 10.000,00">
             </label>
 
-            <button type="Button">Converter</button>
+            <button id="convert-button" type="Button">Converter</button>
 
             <section>
-                <div>
-                    <img src="./images/Real.jpg" alt="Bandeira-Brasil">
-                    <p>Real</p>
-                    <p>R$ 10.000,00</p>
+                <div class="info">
+                    <img src="./images/brasil.png" alt="Bandeira-Brasil">
+                    <p class="name">Real</p>
+                    <p class="value" id="real-value-text" >R$ 10.000,00</p>
                 </div>
 
-                <img src="./images/Vector.png" alt="Seta">
+                <div class="info">
+                    <img class="img" src="./images/Vector.png" alt="Seta">
+                </div>
 
-                <div>
-                    <img src="./images/Dollar.jpg" alt="Bandeira-EUA">
-                    <p>Dollar Americano</p>
-                    <p>US$ 2.000,00</p>
+                <div class="info">
+                    <img id="convert-img" src="./images/Usa.png" alt="Bandeira-EUA">
+                    <p class="name" id="name-text" >Dollar Americano</p>
+                    <p class="value" id="convert-value-text" >US$ 2.000,00</p>
                 </div>
             </section>
 
         </main>
     </div>
 </body>
+<script src="./scripts.js"></script>
 
 </html>
