--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
             <button id="convert-button" type="Button">Converter</button>
 
+            <p class="date" id="date-cot">Data da cotação.</p>
+
             <section>
                 <div class="info">
                     <img src="./images/brasil.png" alt="Bandeira-Brasil">
